--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,11 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            buildConfigField("String", "API_BASE_URL", '"http://172.30.1.49:3000/"')
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            buildConfigField("String", "API_BASE_URL", '"http://172.30.1.49:3000/"')
         }
     }
     compileOptions {
