--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,9 @@ dependencies {
     //Glide
     implementation "com.github.bumptech.glide:glide:4.12.0"
 
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:29.0.0'
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
