--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ plugins {
     id 'kotlin-kapt'
 }
 
+def localPropertiesFile = rootProject.file("local.properties")
+def localProperties = new Properties()
+localProperties.load(new FileInputStream(localPropertiesFile))
+
 android {
     compileSdk 32
 
@@ -15,16 +19,18 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "String", "OAUTH_GOOGLE_ID", localProperties['OAUTH_GOOGLE_ID']
     }
 
     buildTypes {
         release {
             minifyEnabled false
-            buildConfigField("String", "API_BASE_URL", '"http://192.168.200.118:3000/"')
+            buildConfigField("String", "API_BASE_URL", '"http://192.168.25.1:3000/"')
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
-            buildConfigField("String", "API_BASE_URL", '"http://192.168.200.118:3000/"')
+            buildConfigField("String", "API_BASE_URL", '"http://192.168.25.1:3000/"')
         }
     }
     compileOptions {
@@ -40,8 +46,12 @@ android {
 }
 
 dependencies {
+    // Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
+
+    // Google Login
+    implementation 'com.google.android.gms:play-services-auth:20.3.0'
 
     //Activity
     implementation "androidx.activity:activity-ktx:1.4.0"
@@ -78,9 +88,6 @@ dependencies {
 
     //Glide
     implementation "com.github.bumptech.glide:glide:4.12.0"
-
-    //noinspection GradleCompatible
-    implementation 'com.android.support:design:29.0.0'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
