--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:name=".ui.DesignSystemActivity"
             android:exported="true" />
         <activity
-            android:name=".ui.register.RegisterActivity"
+            android:name=".ui.signUp.SignUpActivity"
             android:exported="false" />
         <activity
             android:name=".ui.login.LoginActivity"
