--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,10 @@ android {
 }
 
 dependencies {
+    // Retrofit2 라이브러리
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
     // Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
