--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
         android:theme="@style/Theme.Membeder"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
+        <activity
+            android:name=".ui.teamMake.TeamMakeActivity"
+            android:exported="false">
+        </activity>
         <activity
             android:name=".ui.DesignSystemActivity"
             android:exported="true" />
@@ -37,11 +40,7 @@
         </activity>
         <activity
             android:name=".ui.main.MainActivity"
-            android:exported="true">
-        </activity>
-
-
-
+            android:exported="true"></activity>
     </application>
 
 </manifest>
