--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,13 +46,9 @@ android {
 }
 
 dependencies {
-    //Retrofit
-    def retrofit_version = "2.9.0"
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
-
-    //Moshi
-    implementation 'com.squareup.moshi:moshi-kotlin:1.9.3'
+    // Retrofit2 라이브러리
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
     // Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
@@ -72,6 +68,9 @@ dependencies {
     //Activity
     implementation "androidx.activity:activity-ktx:1.4.0"
 
+    //SplashScreen
+    implementation "androidx.core:core-splashscreen:1.0.0-alpha02"
+
     //SwipeRefresh
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
@@ -83,7 +82,13 @@ dependencies {
     //OkHttp
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.1"
     implementation "com.squareup.okhttp3:okhttp-urlconnection:4.9.1" // CookieJar
-    
+
+
+    //Retrofit
+    def retrofit_version = "2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+
     //Glide
     implementation "com.github.bumptech.glide:glide:4.12.0"
 
