--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".TodoDeleteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TodoEditActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.team.manage.TodoManageActivity"
             android:exported="false">
             <meta-data
