--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
 
 
         <activity
-            android:name=".TodoDeleteActivity"
+            android:name=".ui.team.caleander.TodoDeleteActivity"
             android:exported="false" />
         <activity
             android:name=".TodoEditActivity"
