--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,9 @@
         android:theme="@style/Theme.Membeder"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
-
-
+        <activity
+            android:name=".TodoFinalEditActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.team.manage.AuthorityManageActivity"
             android:exported="false">
@@ -28,6 +28,20 @@
         </activity>
         <activity
             android:name=".ui.team.manage.MemberBanActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".ui.team.caleander.TodoEditActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".ui.team.caleander.TodoDeleteActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
