--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".TodoFinalEditActivity"
+            android:name=".ui.team.caleander.TodoFinalEditActivity"
             android:exported="false" />
         <activity
             android:name=".ui.team.manage.AuthorityManageActivity"
