--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,13 @@
                 android:value="" />
         </activity>
         <activity
+            android:name=".ui.main.ContestDetailActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ui.team.manage.TeamProfileEditActivity"
             android:exported="false" />
         <activity
@@ -84,13 +91,13 @@
             android:name=".ui.schedule.ScheduleAddActivity"
             android:exported="false" />
         <activity
-            android:name="com.heechan.membeder.ui.team.select.TeamSelectActivity"
+            android:name=".ui.team.select.TeamSelectActivity"
             android:exported="false" />
         <activity
             android:name=".ui.team.manage.TeamManageMainActivity"
             android:exported="false" />
         <activity
-            android:name="com.heechan.membeder.ui.team.make.TeamMakeActivity"
+            android:name=".ui.team.make.TeamMakeActivity"
             android:exported="false" />
         <activity
             android:name=".ui.DesignSystemActivity"
