--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".ui.team.manage.AddNoiceActivity"
+            android:name=".ui.team.manage.AddNoticeActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
