--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
             android:name=".ui.chatting.chat.ChatActivity"
             android:exported="false" />
         <activity
+            android:name=".ui.chatting.room.ChatRoomActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.team.caleander.TodoFinalEditActivity"
             android:exported="false" />
         <activity
