--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
                 android:value="" />
         </activity>
         <activity
+            android:name=".ui.main.ContestDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.team.manage.TeamProfileEditActivity"
             android:exported="false" />
         <activity
